--- a/daily_learning/2026-01-04.md
+++ b/daily_learning/2026-01-04.md
@@ -1,19 +1,5 @@
-# 2026-01-03
+# 2026-01-04
 
 ## Focus
-Hirerichal clustering.
+PowerBI
 
-## Learning
-- here we have two approach - Divisive and Agglomerative
-- Dandrogram
-- it is an unsupervised clustering algorithm
-- linkage - single, centroid, mean
-
-## Action
-Studied core concepts, working principles, and use cases.
-
-## Friction
-Need more intuition on cluster evaluation.
-
-## Next
-Implement small examples and visualize results.
